--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,20 +1,21 @@
-- host: !secret 'host_living_room_shield'
+- platform: kodi
+  host: !secret 'host_living_room_shield'
   name: Living Room Kodi
-  platform: kodi
-- host: !secret 'host_living_room_shield'
+- platform: androidtv
+  adbkey: /config/android/adbkey
+  host: !secret 'host_living_room_shield'
   name: Living Room ShieldTV
-  platform: androidtv
-- host: !secret 'host_bedroom_firetv'
+- platform: kodi
+  host: !secret 'host_bedroom_firetv'
   name: Bedroom Kodi
-  platform: kodi
-- host: !secret 'host_bedroom_firetv'
+- platform: androidtv
+  adbkey: /config/android/adbkey
+  host: !secret 'host_bedroom_firetv'
   name: Bedroom FireTV
-  platform: androidtv
-- host: !secret 'host_living_room_soundbar'
-  device_class: soundbar
-  name: Living Room Sound Bar
+- suppress_warning: true
   platform: vizio
-  suppress_warning: true
-- include_non_clients: true
+  device_class: soundbar
+  host: !secret 'host_living_room_soundbar'
+  name: Living Room Sound Bar
+- entity_namespace: plex
   platform: plex
-  entity_namespace: plex
