--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,57 +1,59 @@
-homeassistant:
-  auth_providers:
-  - type: homeassistant
-  latitude: !secret 'lat_home'
-  customize: !include 'customize.yaml'
-  elevation: !secret 'elevation_home'
-  unit_system: imperial
-  longitude: !secret 'long_home'
-  name: Home
-  time_zone: America/New_York
-sensor: !include 'sensor.yaml'
-binary_sensor: !include 'binary_sensor.yaml'
+logbook:
 roku: !include 'roku.yaml'
-config:
+history:
+googlehome: !include 'googlehome.yaml'
 device_tracker: !include 'device_tracker.yaml'
-recorder:
-  purge_interval: 1
-  purge_keep_days: 30
+system_health:
+group: !include 'groups.yaml'
+ssdp:
+map:
+config:
 discovery:
   ignore:
   - plex_mediaserver
   - roku
-conversation:
-map:
-climate: !include 'climate.yaml'
 automation: !include 'automations.yaml'
-light: !include 'light.yaml'
+media_player: !include 'media_player.yaml'
+influxdb:
+  password: !secret 'pass_influx'
+  username: !secret 'user_influx'
+script: !include 'scripts.yaml'
+http:
+  ssl_certificate: /cert/fullchain.pem
+  base_url: !secret 'url_base'
+  ssl_key: /cert/privkey.pem
+weather: !include 'weather.yaml'
+conversation:
+frontend: !include 'frontend.yaml'
+lovelace:
+mqtt:
+  broker: !secret 'host_mqtt'
+  port: !secret 'port_mqtt'
+hacs: !include 'hacs.yaml'
 asuswrt: !include 'asuswrt.yaml'
-zone: !include 'zones.yaml'
+light: !include 'light.yaml'
+lock: !include 'lock.yaml'
 tts:
 - platform: google_translate
-history:
-media_player: !include 'media_player.yaml'
-script: !include 'scripts.yaml'
-notify: !include 'notify.yaml'
-logbook:
-influxdb:
-  username: !secret 'user_influx'
-  password: !secret 'pass_influx'
-weather: !include 'weather.yaml'
-frontend: !include 'frontend.yaml'
-googlehome: !include 'googlehome.yaml'
-http:
-  ssl_key: /cert/privkey.pem
-  base_url: !secret 'url_base'
-  ssl_certificate: /cert/fullchain.pem
-sun:
-lock: !include 'lock.yaml'
-updater:
-group: !include 'groups.yaml'
-custom_updater: !include 'custom_updater.yaml'
 rest_command: !include 'rest_command.yaml'
-mqtt:
-  port: !secret 'port_mqtt'
-  broker: !secret 'host_mqtt'
-lovelace:
-system_health:
+recorder:
+  purge_keep_days: 30
+  purge_interval: 1
+sensor: !include 'sensor.yaml'
+homeassistant:
+  name: Home
+  latitude: !secret 'lat_home'
+  auth_providers:
+  - type: homeassistant
+  customize: !include 'customize.yaml'
+  elevation: !secret 'elevation_home'
+  time_zone: America/New_York
+  longitude: !secret 'long_home'
+  unit_system: imperial
+zeroconf:
+climate: !include 'climate.yaml'
+updater:
+binary_sensor: !include 'binary_sensor.yaml'
+zone: !include 'zones.yaml'
+notify: !include 'notify.yaml'
+sun:
