--- a/notify.yaml
+++ b/notify.yaml
@@ -1,11 +1,11 @@
-- host: !secret 'host_living_room_shield'
+- platform: nfandroidtv
+  host: !secret 'host_living_room_shield'
   name: Living Room
-  platform: nfandroidtv
-- host: !secret 'host_bedroom_firetv'
+- platform: nfandroidtv
+  host: !secret 'host_bedroom_firetv'
   name: Bedroom
-  platform: nfandroidtv
-- icon: ':information_source:'
-  default_channel: !secret 'default_channel_slack'
+- platform: slack
+  icon: ':information_source:'
   api_key: !secret 'api_slack'
+  default_channel: !secret 'default_channel_slack'
   name: Slack
-  platform: slack
