--- a/binary_sensor.yaml
+++ b/binary_sensor.yaml
@@ -1,35 +1,35 @@
-- platform: mqtt
+- name: Living Room Motion
+  payload_on: active
   unique_id: living_room_sensor_motion
-  device_class: motion
-  name: Living Room Motion
-  payload_on: active
+  platform: mqtt
   payload_off: inactive
+  device_class: motion
   state_topic: smartthings/Living Room Sensor/motion
-- platform: mqtt
-  unique_id: master_bedroom_sensor_motion
-  device_class: motion
-  name: Bedroom Motion
+- name: Bedroom Motion
   payload_on: active
+  unique_id: master_bedroom_sensor_motion
+  platform: mqtt
   payload_off: inactive
+  device_class: motion
   state_topic: smartthings/Master Bedroom Sensor/motion
-- platform: mqtt
-  unique_id: front_door_lock_smoke
-  device_class: smoke
-  name: Front Door Smoke
+- name: Front Door Smoke
   payload_on: detected
+  unique_id: front_door_lock_smoke
+  platform: mqtt
   payload_off: clear
+  device_class: smoke
   state_topic: smartthings/Front Door Lock/smoke
-- platform: mqtt
+- name: Raman Home Presence
+  payload_on: present
   unique_id: raman_home
-  device_class: presence
-  name: Raman Home Presence
-  payload_on: present
+  platform: mqtt
   payload_off: not present
+  device_class: presence
   state_topic: smartthings/Raman/presence
-- platform: mqtt
-  unique_id: sherene_home
-  device_class: presence
-  name: Sherene Home Presence
+- name: Sherene Home Presence
   payload_on: present
+  unique_id: sherene_home
+  platform: mqtt
   payload_off: not present
+  device_class: presence
   state_topic: smartthings/Sherene/presence
