--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,59 +1,60 @@
-logbook:
-roku: !include 'roku.yaml'
-history:
-googlehome: !include 'googlehome.yaml'
-device_tracker: !include 'device_tracker.yaml'
-system_health:
-group: !include 'groups.yaml'
-ssdp:
 map:
+frontend: !include 'frontend.yaml'
+system_health:
+roku: !include 'roku.yaml'
+tts:
+- platform: google_translate
+device_tracker: !include 'device_tracker.yaml'
+sun:
+notify: !include 'notify.yaml'
+asuswrt: !include 'asuswrt.yaml'
+zeroconf:
+breaking_changes:
+climate: !include 'climate.yaml'
+lovelace:
+history:
+binary_sensor: !include 'binary_sensor.yaml'
+updater:
+lock: !include 'lock.yaml'
+googlehome: !include 'googlehome.yaml'
+logbook:
+automation: !include 'automations.yaml'
+group: !include 'groups.yaml'
+http:
+  ssl_certificate: /cert/fullchain.pem
+  ssl_key: /cert/privkey.pem
+  base_url: !secret 'url_base'
 config:
+weather: !include 'weather.yaml'
+mqtt:
+  port: !secret 'port_mqtt'
+  broker: !secret 'host_mqtt'
+recorder:
+  purge_interval: 1
+  purge_keep_days: 30
+zone: !include 'zones.yaml'
+ssdp:
+script: !include 'scripts.yaml'
+conversation:
 discovery:
   ignore:
   - plex_mediaserver
   - roku
-automation: !include 'automations.yaml'
-media_player: !include 'media_player.yaml'
+light: !include 'light.yaml'
 influxdb:
   password: !secret 'pass_influx'
   username: !secret 'user_influx'
-script: !include 'scripts.yaml'
-http:
-  ssl_certificate: /cert/fullchain.pem
-  base_url: !secret 'url_base'
-  ssl_key: /cert/privkey.pem
-weather: !include 'weather.yaml'
-conversation:
-frontend: !include 'frontend.yaml'
-lovelace:
-mqtt:
-  broker: !secret 'host_mqtt'
-  port: !secret 'port_mqtt'
 hacs: !include 'hacs.yaml'
-asuswrt: !include 'asuswrt.yaml'
-light: !include 'light.yaml'
-lock: !include 'lock.yaml'
-tts:
-- platform: google_translate
 rest_command: !include 'rest_command.yaml'
-recorder:
-  purge_keep_days: 30
-  purge_interval: 1
-sensor: !include 'sensor.yaml'
 homeassistant:
   name: Home
+  longitude: !secret 'long_home'
+  unit_system: imperial
+  elevation: !secret 'elevation_home'
+  time_zone: America/New_York
+  customize: !include 'customize.yaml'
   latitude: !secret 'lat_home'
   auth_providers:
   - type: homeassistant
-  customize: !include 'customize.yaml'
-  elevation: !secret 'elevation_home'
-  time_zone: America/New_York
-  longitude: !secret 'long_home'
-  unit_system: imperial
-zeroconf:
-climate: !include 'climate.yaml'
-updater:
-binary_sensor: !include 'binary_sensor.yaml'
-zone: !include 'zones.yaml'
-notify: !include 'notify.yaml'
-sun:
+sensor: !include 'sensor.yaml'
+media_player: !include 'media_player.yaml'
