--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,16 +1,4 @@
-- platform: darksky
-  scan_interval:
-    minutes: 15
-  forecast:
-  - 0
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
-  monitored_conditions:
+- monitored_conditions:
   - icon
   - precip_type
   - precip_intensity
@@ -29,47 +17,59 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
+  platform: darksky
+  forecast:
+  - 0
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
   api_key: !secret 'api_darksky'
-- platform: plex
-  password: !secret 'pass_plex'
-  username: !secret 'user_plex'
-  host: !secret 'host_living_room_shield'
-  name: Plex Media Server
-  token: !secret 'token_plex'
+  scan_interval:
+    minutes: 15
+- name: Plex Media Server
   server: home
+  host: !secret 'host_living_room_shield'
+  password: !secret 'pass_plex'
+  platform: plex
+  username: !secret 'user_plex'
+  token: !secret 'token_plex'
 - platform: kodi_recently_added
   host: !secret 'host_nas'
 - platform: radarr_upcoming_media
-  host: !secret 'host_nas'
   api_key: !secret 'api_radarr'
-- platform: sonarr_upcoming_media
   host: !secret 'host_nas'
+- platform: sonarr_upcoming_media
   api_key: !secret 'api_sonarr'
-- platform: waze_travel_time
-  region: US
-  origin: !secret 'address_home'
-  name: Raman Work Commute
+  host: !secret 'host_nas'
+- name: Raman Work Commute
   destination: !secret 'address_work_raman'
-  realtime: true
-- platform: waze_travel_time
   region: US
-  origin: !secret 'address_work_raman'
-  name: Raman Home Commute
-  destination: !secret 'address_home'
-  realtime: true
-- platform: waze_travel_time
-  region: US
+  platform: waze_travel_time
   origin: !secret 'address_home'
-  name: Sherene Work Commute
-  destination: !secret 'address_work_sherene'
   realtime: true
-- platform: waze_travel_time
-  region: US
-  origin: !secret 'address_work_sherene'
-  name: Sherene Home Commute
+- name: Raman Home Commute
   destination: !secret 'address_home'
+  region: US
+  platform: waze_travel_time
+  origin: !secret 'address_work_raman'
   realtime: true
-- platform: pi_hole
+- name: Sherene Work Commute
+  destination: !secret 'address_work_sherene'
+  region: US
+  platform: waze_travel_time
+  origin: !secret 'address_home'
+  realtime: true
+- name: Sherene Home Commute
+  destination: !secret 'address_home'
+  region: US
+  platform: waze_travel_time
+  origin: !secret 'address_work_sherene'
+  realtime: true
+- name: Pi-Hole
   monitored_conditions:
   - ads_blocked_today
   - ads_percentage_today
@@ -80,65 +80,65 @@
   - unique_clients
   - unique_domains
   - clients_ever_seen
+  platform: pi_hole
   host: !secret 'host_pihole'
-  name: Pi-Hole
-- platform: mqtt
-  unique_id: front_door_lock_battery
-  device_class: battery
-  name: Front Door Lock Battery
-  unit_of_measurement: '%'
+- name: Front Door Lock Battery
   state_topic: smartthings/Front Door Lock/battery
-- platform: mqtt
-  unique_id: living_room_sensor_battery
-  device_class: battery
-  name: Living Room Sensor Battery
   unit_of_measurement: '%'
+  platform: mqtt
+  device_class: battery
+  unique_id: front_door_lock_battery
+- name: Living Room Sensor Battery
   state_topic: smartthings/Living Room Sensor/battery
-- platform: mqtt
-  unique_id: master_bedroom_sensor_battery
+  unit_of_measurement: '%'
+  platform: mqtt
   device_class: battery
-  name: Master Bedroom Sensor Battery
-  unit_of_measurement: '%'
+  unique_id: living_room_sensor_battery
+- name: Master Bedroom Sensor Battery
   state_topic: smartthings/Master Bedroom Sensor/battery
-- platform: mqtt
-  unique_id: thermostat_humidity
-  device_class: humidity
-  name: Thermostat Humidity
   unit_of_measurement: '%'
+  platform: mqtt
+  device_class: battery
+  unique_id: master_bedroom_sensor_battery
+- name: Thermostat Humidity
   state_topic: smartthings/Thermostat/humidity
-- platform: mqtt
-  unique_id: living_room_sensor_humidity
-  device_class: humidity
-  name: Living Room Humidity
   unit_of_measurement: '%'
+  platform: mqtt
+  device_class: humidity
+  unique_id: thermostat_humidity
+- name: Living Room Humidity
   state_topic: smartthings/Living Room Sensor/humidity
-- platform: mqtt
-  unique_id: master_bedroom_sensor_humidity
-  device_class: humidity
-  name: Master Bedroom Humidity
   unit_of_measurement: '%'
+  platform: mqtt
+  device_class: humidity
+  unique_id: living_room_sensor_humidity
+- name: Master Bedroom Humidity
   state_topic: smartthings/Master Bedroom Sensor/humidity
-- platform: mqtt
-  unique_id: living_room_sensor_temperature
-  device_class: temperature
-  name: Living Room Temperature
-  unit_of_measurement: "\xB0F"
+  unit_of_measurement: '%'
+  platform: mqtt
+  device_class: humidity
+  unique_id: master_bedroom_sensor_humidity
+- name: Living Room Temperature
   state_topic: smartthings/Living Room Sensor/temperature
-- platform: mqtt
-  unique_id: master_bedroom_sensor_temperature
-  device_class: temperature
-  name: Master Bedroom Temperature
   unit_of_measurement: "\xB0F"
+  platform: mqtt
+  device_class: temperature
+  unique_id: living_room_sensor_temperature
+- name: Master Bedroom Temperature
   state_topic: smartthings/Master Bedroom Sensor/temperature
-- platform: mqtt
-  unique_id: living_room_sensor_illuminance
-  device_class: illuminance
-  name: Living Room Illuminance
-  unit_of_measurement: lm
+  unit_of_measurement: "\xB0F"
+  platform: mqtt
+  device_class: temperature
+  unique_id: master_bedroom_sensor_temperature
+- name: Living Room Illuminance
   state_topic: smartthings/Living Room Sensor/illuminance
-- platform: mqtt
-  unique_id: master_bedroom_sensor_illuminance
-  device_class: illuminance
-  name: Master Bedroom Illuminance
   unit_of_measurement: lm
+  platform: mqtt
+  device_class: illuminance
+  unique_id: living_room_sensor_illuminance
+- name: Master Bedroom Illuminance
   state_topic: smartthings/Master Bedroom Sensor/illuminance
+  unit_of_measurement: lm
+  platform: mqtt
+  device_class: illuminance
+  unique_id: master_bedroom_sensor_illuminance
