--- a/sensor.yaml
+++ b/sensor.yaml
@@ -1,4 +1,17 @@
-- monitored_conditions:
+- platform: darksky
+  api_key: !secret 'api_darksky'
+  forecast:
+  - 0
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+  - 7
+  scan_interval:
+    minutes: 15
+  monitored_conditions:
   - icon
   - precip_type
   - precip_intensity
@@ -17,59 +30,48 @@
   - apparent_temperature_high
   - apparent_temperature_low
   - precip_intensity_max
-  platform: darksky
-  forecast:
-  - 0
-  - 1
-  - 2
-  - 3
-  - 4
-  - 5
-  - 6
-  - 7
-  api_key: !secret 'api_darksky'
-  scan_interval:
-    minutes: 15
-- name: Plex Media Server
+- platform: plex
+  name: Plex Media Server
   server: home
   host: !secret 'host_living_room_shield'
-  password: !secret 'pass_plex'
-  platform: plex
-  username: !secret 'user_plex'
   token: !secret 'token_plex'
+  username: !secret 'user_plex'
+  password: !secret 'pass_plex'
 - platform: kodi_recently_added
   host: !secret 'host_nas'
 - platform: radarr_upcoming_media
+  host: !secret 'host_nas'
   api_key: !secret 'api_radarr'
-  host: !secret 'host_nas'
 - platform: sonarr_upcoming_media
-  api_key: !secret 'api_sonarr'
   host: !secret 'host_nas'
-- name: Raman Work Commute
+  api_key: !secret 'api_sonarr'
+- platform: waze_travel_time
+  name: Raman Work Commute
+  origin: !secret 'address_home'
   destination: !secret 'address_work_raman'
   region: US
-  platform: waze_travel_time
-  origin: !secret 'address_home'
   realtime: true
-- name: Raman Home Commute
+- platform: waze_travel_time
+  name: Raman Home Commute
+  origin: !secret 'address_work_raman'
   destination: !secret 'address_home'
   region: US
-  platform: waze_travel_time
-  origin: !secret 'address_work_raman'
   realtime: true
-- name: Sherene Work Commute
+- platform: waze_travel_time
+  name: Sherene Work Commute
+  origin: !secret 'address_home'
   destination: !secret 'address_work_sherene'
   region: US
-  platform: waze_travel_time
-  origin: !secret 'address_home'
   realtime: true
-- name: Sherene Home Commute
+- platform: waze_travel_time
+  name: Sherene Home Commute
+  origin: !secret 'address_work_sherene'
   destination: !secret 'address_home'
   region: US
-  platform: waze_travel_time
-  origin: !secret 'address_work_sherene'
   realtime: true
-- name: Pi-Hole
+- platform: pi_hole
+  name: Pi-Hole
+  host: !secret 'host_pihole'
   monitored_conditions:
   - ads_blocked_today
   - ads_percentage_today
@@ -80,65 +82,63 @@
   - unique_clients
   - unique_domains
   - clients_ever_seen
-  platform: pi_hole
-  host: !secret 'host_pihole'
-- name: Front Door Lock Battery
-  state_topic: smartthings/Front Door Lock/battery
-  unit_of_measurement: '%'
-  platform: mqtt
-  device_class: battery
+- platform: mqtt
+  name: Front Door Lock Battery
   unique_id: front_door_lock_battery
-- name: Living Room Sensor Battery
-  state_topic: smartthings/Living Room Sensor/battery
   unit_of_measurement: '%'
-  platform: mqtt
   device_class: battery
+  state_topic: smartthings/Front Door Lock/battery
+- platform: mqtt
+  name: Living Room Sensor Battery
   unique_id: living_room_sensor_battery
-- name: Master Bedroom Sensor Battery
-  state_topic: smartthings/Master Bedroom Sensor/battery
   unit_of_measurement: '%'
-  platform: mqtt
   device_class: battery
+  state_topic: smartthings/Living Room Sensor/battery
+- platform: mqtt
+  name: Master Bedroom Sensor Battery
   unique_id: master_bedroom_sensor_battery
-- name: Thermostat Humidity
-  state_topic: smartthings/Thermostat/humidity
   unit_of_measurement: '%'
-  platform: mqtt
-  device_class: humidity
+  device_class: battery
+  state_topic: smartthings/Master Bedroom Sensor/battery
+- platform: mqtt
+  name: Thermostat Humidity
   unique_id: thermostat_humidity
-- name: Living Room Humidity
-  state_topic: smartthings/Living Room Sensor/humidity
   unit_of_measurement: '%'
-  platform: mqtt
   device_class: humidity
+  state_topic: smartthings/Thermostat/humidity
+- platform: mqtt
+  name: Living Room Humidity
   unique_id: living_room_sensor_humidity
-- name: Master Bedroom Humidity
-  state_topic: smartthings/Master Bedroom Sensor/humidity
   unit_of_measurement: '%'
-  platform: mqtt
   device_class: humidity
+  state_topic: smartthings/Living Room Sensor/humidity
+- platform: mqtt
+  name: Master Bedroom Humidity
   unique_id: master_bedroom_sensor_humidity
-- name: Living Room Temperature
-  state_topic: smartthings/Living Room Sensor/temperature
-  unit_of_measurement: "\xB0F"
-  platform: mqtt
-  device_class: temperature
+  unit_of_measurement: '%'
+  device_class: humidity
+  state_topic: smartthings/Master Bedroom Sensor/humidity
+- platform: mqtt
+  name: Living Room Temperature
   unique_id: living_room_sensor_temperature
-- name: Master Bedroom Temperature
-  state_topic: smartthings/Master Bedroom Sensor/temperature
   unit_of_measurement: "\xB0F"
-  platform: mqtt
   device_class: temperature
+  state_topic: smartthings/Living Room Sensor/temperature
+- platform: mqtt
+  name: Master Bedroom Temperature
   unique_id: master_bedroom_sensor_temperature
-- name: Living Room Illuminance
-  state_topic: smartthings/Living Room Sensor/illuminance
-  unit_of_measurement: lm
-  platform: mqtt
-  device_class: illuminance
+  unit_of_measurement: "\xB0F"
+  device_class: temperature
+  state_topic: smartthings/Master Bedroom Sensor/temperature
+- platform: mqtt
+  name: Living Room Illuminance
   unique_id: living_room_sensor_illuminance
-- name: Master Bedroom Illuminance
-  state_topic: smartthings/Master Bedroom Sensor/illuminance
   unit_of_measurement: lm
-  platform: mqtt
   device_class: illuminance
+  state_topic: smartthings/Living Room Sensor/illuminance
+- platform: mqtt
+  name: Master Bedroom Illuminance
   unique_id: master_bedroom_sensor_illuminance
+  unit_of_measurement: lm
+  device_class: illuminance
+  state_topic: smartthings/Master Bedroom Sensor/illuminance
