--- a/climate.yaml
+++ b/climate.yaml
@@ -1,38 +1,38 @@
-- current_temperature_topic: smartthings/Thermostat/temperature
-  fan_modes:
-  - auto
-  - 'on'
-  temperature_state_topic: smartthings/Thermostat/heatingSetpoint
-  temperature_command_topic: smartthings/Thermostat/heatingSetpoint
-  modes:
-  - 'off'
-  - heat
-  - cool
-  - auto
-  temp_step: 0.5
-  platform: mqtt
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+- platform: mqtt
   name: Thermostat Heat
-  mode_state_topic: smartthings/Thermostat/thermostatMode
-  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  mode_command_topic: smartthings/Thermostat/thermostatMode
   unique_id: thermostat_heat
-- current_temperature_topic: smartthings/Thermostat/temperature
-  fan_modes:
-  - auto
-  - 'on'
-  temperature_state_topic: smartthings/Thermostat/coolingSetpoint
-  temperature_command_topic: smartthings/Thermostat/coolingSetpoint
+  current_temperature_topic: smartthings/Thermostat/temperature
+  mode_command_topic: smartthings/Thermostat/thermostatMode
+  mode_state_topic: smartthings/Thermostat/thermostatMode
   modes:
   - 'off'
   - heat
   - cool
   - auto
-  temp_step: 0.5
-  platform: mqtt
-  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
-  name: Thermostat Cool
-  mode_state_topic: smartthings/Thermostat/thermostatMode
   fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
-  mode_command_topic: smartthings/Thermostat/thermostatMode
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  fan_modes:
+  - auto
+  - 'on'
+  temperature_command_topic: smartthings/Thermostat/heatingSetpoint
+  temperature_state_topic: smartthings/Thermostat/heatingSetpoint
+  temp_step: 0.5
+- platform: mqtt
+  name: Thermostat Cool
   unique_id: thermostat_cool
+  current_temperature_topic: smartthings/Thermostat/temperature
+  mode_command_topic: smartthings/Thermostat/thermostatMode
+  mode_state_topic: smartthings/Thermostat/thermostatMode
+  modes:
+  - 'off'
+  - heat
+  - cool
+  - auto
+  fan_mode_command_topic: smartthings/Thermostat/thermostatFanMode
+  fan_mode_state_topic: smartthings/Thermostat/thermostatFanMode
+  fan_modes:
+  - auto
+  - 'on'
+  temperature_command_topic: smartthings/Thermostat/coolingSetpoint
+  temperature_state_topic: smartthings/Thermostat/coolingSetpoint
+  temp_step: 0.5
