--- a/hacs.yaml
+++ b/hacs.yaml
@@ -1,3 +1,3 @@
-python_script: 'True'
-appdaemon: 'True'
-token: !secret 'hacs_token'
+token: !secret 'token_hacs'
+appdaemon: true
+python_script: true
