--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,21 +1,21 @@
-- name: Living Room Kodi
-  platform: kodi
+- platform: kodi
+  name: Living Room Kodi
   host: !secret 'host_living_room_shield'
-- name: Living Room ShieldTV
-  adbkey: /config/android/adbkey
-  platform: androidtv
+- platform: androidtv
+  name: Living Room ShieldTV
   host: !secret 'host_living_room_shield'
-- name: Bedroom Kodi
-  platform: kodi
-  host: !secret 'host_bedroom_firetv'
-- name: Bedroom FireTV
   adbkey: /config/android/adbkey
-  platform: androidtv
+- platform: kodi
+  name: Bedroom Kodi
   host: !secret 'host_bedroom_firetv'
-- name: Living Room Sound Bar
-  suppress_warning: true
-  platform: vizio
-  device_class: soundbar
+- platform: androidtv
+  name: Bedroom FireTV
+  host: !secret 'host_bedroom_firetv'
+  adbkey: /config/android/adbkey
+- platform: vizio
+  name: Living Room Sound Bar
   host: !secret 'host_living_room_soundbar'
-- entity_namespace: plex
-  platform: plex
+  suppress_warning: true
+  device_class: soundbar
+- platform: plex
+  entity_namespace: plex
