--- a/notify.yaml
+++ b/notify.yaml
@@ -1,11 +1,11 @@
-- name: Living Room
-  platform: nfandroidtv
+- platform: nfandroidtv
+  name: Living Room
   host: !secret 'host_living_room_shield'
-- name: Bedroom
-  platform: nfandroidtv
+- platform: nfandroidtv
+  name: Bedroom
   host: !secret 'host_bedroom_firetv'
-- name: Slack
-  platform: slack
-  icon: ':information_source:'
+- platform: slack
+  name: Slack
   api_key: !secret 'api_slack'
   default_channel: !secret 'default_channel_slack'
+  icon: ':information_source:'
